src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0402_import_aliasing.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    ConsiderUsingFromImport:
      module: os
      name: path
  location:
    row: 9
    column: 7
  end_location:
    row: 9
    column: 22
  fix:
    content:
      - from os import path
    location:
      row: 9
      column: 0
    end_location:
      row: 9
      column: 22
  parent: ~
- kind:
    ConsiderUsingFromImport:
      module: foo.bar
      name: foobar
  location:
    row: 11
    column: 7
  end_location:
    row: 11
    column: 31
  fix:
    content:
      - from foo.bar import foobar
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 31
  parent: ~
- kind:
    ConsiderUsingFromImport:
      module: foo.bar
      name: foobar
  location:
    row: 12
    column: 7
  end_location:
    row: 12
    column: 31
  fix: ~
  parent: ~

