src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0911_too_many_return_statements.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    TooManyReturnStatements:
      returns: 11
      max_returns: 6
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 19
  fix: ~
  parent: ~

