src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0913_too_many_args.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    TooManyArgs:
      c_args: 8
      max_args: 5
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
  parent: ~
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 5
  location:
    row: 16
    column: 0
  end_location:
    row: 17
    column: 8
  fix: ~
  parent: ~
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 5
  location:
    row: 19
    column: 0
  end_location:
    row: 20
    column: 8
  fix: ~
  parent: ~

