src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1701_consider_merging_isinstance.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    ConsiderMergingIsinstance:
      - "var[3]"
      - - float
        - int
  location:
    row: 15
    column: 7
  end_location:
    row: 15
    column: 96
  fix: ~
  parent: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[4]"
      - - float
        - int
  location:
    row: 17
    column: 13
  end_location:
    row: 17
    column: 103
  fix: ~
  parent: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[5]"
      - - float
        - int
  location:
    row: 19
    column: 13
  end_location:
    row: 19
    column: 73
  fix: ~
  parent: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[10]"
      - - list
        - str
  location:
    row: 23
    column: 13
  end_location:
    row: 23
    column: 158
  fix: ~
  parent: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[11]"
      - - float
        - int
  location:
    row: 24
    column: 13
  end_location:
    row: 24
    column: 95
  fix: ~
  parent: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[12]"
      - - float
        - int
        - list
  location:
    row: 30
    column: 13
  end_location:
    row: 30
    column: 75
  fix: ~
  parent: ~

