src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_consider_using_sys_exit_4.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    UseSysExit:
      name: exit
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix:
    content:
      - exit2
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 4
  parent: ~
- kind:
    UseSysExit:
      name: quit
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    content:
      - exit2
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 4
  parent: ~
- kind:
    UseSysExit:
      name: exit
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 8
  fix:
    content:
      - exit2
    location:
      row: 8
      column: 4
    end_location:
      row: 8
      column: 8
  parent: ~
- kind:
    UseSysExit:
      name: quit
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    content:
      - exit2
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8
  parent: ~

