src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_consider_using_sys_exit_5.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    UseSysExit:
      name: quit
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    content:
      - exit
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 4
  parent: ~
- kind:
    UseSysExit:
      name: quit
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    content:
      - exit
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8
  parent: ~

